# snaze

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
config/: SnazeConfig.hpp.in
docs/: author.md
src/: main.cpp
src/controller/: GameController.cpp  GameController.hpp
src/models/: Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Snake.cpp  Snake.hpp
src/models/players/: Greedy.cpp  Greedy.hpp  Greedy_.cpp  Greedy_.hpp  Random.cpp  Random.hpp
src/utils/: Element.cpp  Element.hpp  Position.cpp  Position.hpp  Side.cpp  Side.hpp  Utils.hpp
src/view/: View.cpp  View.hpp
